--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "projeto-pratica-crud",
+  "name": "projeto-pratica-crud-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for Task Manager application",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-  "dev": "nodemon server.js",
-  "start": "node server.js"
-},
-  "keywords": [],
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": ["crud", "express", "api"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "eslint": "^8.54.0"
   }
-  
 }
