--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
+    "@tailwindcss/postcss": "^4.1.16",
     "vite": "^7.1.7"
   }
 }
